--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "device-features-demo",
-    "slug": "device-features-demo",
-    "version": "1.0.0",
+    "name": "Csync",
+    "slug": "Csync Demo",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
