--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -17,6 +18,7 @@
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.24",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
     "react": "18.2.0",
