--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "^51.0.39",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
-    "expo-router": "~3.5.24",
+    "expo-router": "^3.1.0",
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
