--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.28",
+    "expo": "^51.0.39",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.24",
