--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.5",
@@ -34,7 +35,8 @@
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
